[project]
name = "televault"
version = "2.0.0"
description = "Unlimited cloud storage using Telegram MTProto. No local DB - everything on Telegram."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yahya Toubali", email = "contact@yahyatoubali.me" }]
keywords = ["telegram", "storage", "cloud", "mtproto", "backup"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Archiving :: Backup",
]

dependencies = [
    "telethon>=1.36.0",
    "cryptography>=42.0.0",
    "zstandard>=0.22.0",
    "blake3>=0.4.0",
    "textual>=0.47.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "aiofiles>=23.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
televault = "televault.cli:main"
tv = "televault.cli:main"
televault-tui = "televault.tui:run_tui"

[project.urls]
Homepage = "https://github.com/YahyaToubali/televault"
Repository = "https://github.com/YahyaToubali/televault"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/televault"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
